@@ -60,10 +60,8 @@ class LocationService
         $stmt  = $sql->prepareStatementForSqlObject($query);
         $rows  = $stmt->execute();
         if (false === ($row = $rows->current())) {
-            // TODO replace with a NotFoundException
             throw new NotFoundException('Geocoder location ['. $geocodedLocation->geocoding->provider.':'.$geocodedLocation->geocoding->idProvider.'] not found');
         } else if (false !== $rows->next()) {
-            // TODO replace with a TooManyHitsException
             throw new FoundTooManyException('Too many geocoder locations found for  ['.$geocodedLocation->geocoding->provider.':'.$geocodedLocation->geocoding->idProvider.']');
         }
 
@@ -81,86 +79,107 @@ class LocationService
      */
     public function insertGeocoderLocationOfGeocodedPlaceStdClass($geocodedLocation)
     {
-        /*
-            1st step - Actually store the geocoder location data
-        */
-        $geocoding = $geocodedLocation->geocoding;
-        $values['geocoding_datetime_utc'] = $geocoding->geocodingDateTimeUTC;
-        $values['geocoding_provider']     = $geocoding->provider;
-        $values['geocoder_object_id']     = $geocoding->idProvider;
-        $values['geocoded_latitude']      = $geocoding->coordinates->latitude;
-        $values['geocoded_longitude']     = $geocoding->coordinates->longitude;
-        $values['geocoded_country_code']  = $geocoding->country->isoCode;
-        $values['geocoded_timezone']      = $geocoding->timezone;
+        // TODO Manage cases where a transaction is already started
+        $this->adapter->getDriver()->getConnection()->beginTransaction();
 
-        $sql   = new Sql($this->adapter);
-        $query = $sql
-            ->insert('geocoder_locations')
-            ->values($values);
-        $stmt  = $sql->prepareStatementForSqlObject($query);
-        $stmt->execute();
-
-        $geocoderDataId = $this->adapter->getDriver()->getLastGeneratedValue();
-
-        /*
-            2nd step - If possible store additionnal data for potential use
-            in future. So as to be able to geocode places with (almost) no more
-            external geocoder API call.
-        */
-        $placeNames  = [];
-        $postalCodes = [];
-        switch ($geocodedLocation->geocoding->provider) {
-            case 'nominatim':
-                $relation     = $this->openstreetmapService->getRelationById($geocodedLocation->geocoding->idProvider);
-                $officialName = $relation->getOfficialName();
-                $placeNames   = $relation->getNames();
-                $postalCodes  = $relation->getPostalCodes();
-                // FIXME Not sure this is the best way to retrieve the country code
-                $countryCode = $geocodedLocation->country->code;
-                if (1 === count($postalCodes)) {
-                    $keptPostalCode = $postalCodes[0];
-                } else {
-                    // probably several postal codes for the same area
-                    $keptPostalCode = null;
-                }
-                break;
-            default:
-                throw new \Exception('Oups... Unable to get official names, postal codes, etc with geocoding provider ['.$geocodedLocation->geocoding->provider.']');
-        }
-
-        // Is there already a place pointing to the same geocoder provider/idProvider
-        // or with same name and postal code in the same country?
         try {
-            $placeId = $this->getIdOfPlaceByNamePostalCodeCountryCodeEtc($officialName, $keptPostalCode, $countryCode, $geocodedLocation->geocoding->provider, $geocodedLocation->geocoding->idProvider);
-        } catch (NotFoundException $e) {
-            // Ok insert
-            $values = [];
-            $values['name']                      = $officialName;
-            $values['postal_code']               = $keptPostalCode;
-            $values['country_code']              = $countryCode;
-            $values['best_geocoder_location_id'] = $geocoderDataId;
+            /*
+                1st step - Actually store the geocoder location data
+            */
+            $geocoding = $geocodedLocation->geocoding;
+            $values['geocoding_datetime_utc'] = $geocoding->geocodingDateTimeUTC;
+            $values['geocoding_provider']     = $geocoding->provider;
+            $values['geocoder_object_id']     = $geocoding->idProvider;
+            $values['geocoded_latitude']      = $geocoding->coordinates->latitude;
+            $values['geocoded_longitude']     = $geocoding->coordinates->longitude;
+            $values['geocoded_country_code']  = $geocoding->country->isoCode;
+            $values['geocoded_timezone']      = $geocoding->timezone;
 
             $sql   = new Sql($this->adapter);
             $query = $sql
-                ->insert('places')
+                ->insert('geocoder_locations')
                 ->values($values);
             $stmt  = $sql->prepareStatementForSqlObject($query);
             $stmt->execute();
 
-            $placeId = $this->adapter->getDriver()->getLastGeneratedValue();
+            $geocoderDataId = $this->adapter->getDriver()->getLastGeneratedValue();
 
-            // Store alternative names
-            foreach ($placeNames as $locale => $name)
-            {
-                if (2 === strlen($locale)) {
+            /*
+                2nd step - If possible store additionnal data for potential use
+                in future. So as to be able to geocode places with (almost) no more
+                external geocoder API call.
+            */
+            $placeNames  = [];
+            $postalCodes = [];
+            switch ($geocodedLocation->geocoding->provider) {
+                case 'nominatim':
+                    $relation     = $this->openstreetmapService->getRelationById($geocodedLocation->geocoding->idProvider);
+                    $officialName = $relation->getOfficialName();
+                    $placeNames   = $relation->getNames();
+                    $postalCodes  = $relation->getPostalCodes();
+                    // FIXME Not sure this is the best way to retrieve the country code
+                    $countryCode = $geocodedLocation->country->code;
+                    if (1 === count($postalCodes)) {
+                        $keptPostalCode = $postalCodes[0];
+                    } else {
+                        // probably several postal codes for the same area
+                        $keptPostalCode = null;
+                    }
+                    break;
+                default:
+                    throw new \Exception('Oups... Unable to get official names, postal codes, etc with geocoding provider ['.$geocodedLocation->geocoding->provider.']');
+            }
+
+            // Is there already a place pointing to the same geocoder provider/idProvider
+            // or with same name and postal code in the same country?
+            try {
+                $placeId = $this->getIdOfPlaceByNamePostalCodeCountryCodeEtc($officialName, $keptPostalCode, $countryCode, $geocodedLocation->geocoding->provider, $geocodedLocation->geocoding->idProvider);
+            } catch (NotFoundException $e) {
+                // Ok insert
+                $values = [];
+                $values['name']                      = $officialName;
+                $values['postal_code']               = $keptPostalCode;
+                $values['country_code']              = $countryCode;
+                $values['best_geocoder_location_id'] = $geocoderDataId;
+
+                $sql   = new Sql($this->adapter);
+                $query = $sql
+                    ->insert('places')
+                    ->values($values);
+                $stmt  = $sql->prepareStatementForSqlObject($query);
+                $stmt->execute();
+
+                $placeId = $this->adapter->getDriver()->getLastGeneratedValue();
+
+                // Store alternative names
+                foreach ($placeNames as $locale => $name)
+                {
+                    if (2 === strlen($locale)) {
+                        // Huho... I really need to find the right way to use prepared statements
+                        $query = $sql
+                            ->insert('place_names')
+                            ->values(
+                                [
+                                    'place_id' => $placeId,
+                                    'locale'   => $locale,
+                                    'name'     => $name,
+                                ]
+                            );
+                        $stmt  = $sql->prepareStatementForSqlObject($query);
+                        $stmt->execute();
+                    }
+                }
+
+                // Store all postal codes
+                foreach ($postalCodes as $postalCode)
+                {
                     // Huho... I really need to find the right way to use prepared statements
                     $query = $sql
-                        ->insert('place_names')
+                        ->insert('place_postal_codes')
                         ->values(
                             [
-                                'place_id' => $placeId,
-                                'locale'   => $locale,
-                                'name'     => $name,
+                                'place_id'    => $placeId,
+                                'postal_code' => $postalCode,
                             ]
                         );
                     $stmt  = $sql->prepareStatementForSqlObject($query);
@@ -168,33 +187,21 @@ class LocationService
                 }
             }
 
-            // Store all postal codes
-            foreach ($postalCodes as $postalCode)
-            {
-                // Huho... I really need to find the right way to use prepared statements
-                $query = $sql
-                    ->insert('place_postal_codes')
-                    ->values(
-                        [
-                            'place_id'    => $placeId,
-                            'postal_code' => $postalCode,
-                        ]
-                    );
-                $stmt  = $sql->prepareStatementForSqlObject($query);
-                $stmt->execute();
-            }
+            $sql   = new Sql($this->adapter);
+            $query = $sql
+                ->update('geocoder_locations')
+                ->set(
+                    ['place_id' => $placeId]
+                )
+                ->where(['id' => $geocoderDataId]);
+            $stmt  = $sql->prepareStatementForSqlObject($query);
+            $stmt->execute();
+
+            $this->adapter->getDriver()->getConnection()->commit();
+        } catch (\Exception $e) {
+            $this->adapter->getDriver()->getConnection()->rollback();
+            throw new \Exception('Saving location failed', 0, $e);
         }
-
-        $sql   = new Sql($this->adapter);
-        $query = $sql
-            ->update('geocoder_locations')
-            ->set(
-                ['place_id' => $placeId]
-            )
-            ->where(['id' => $geocoderDataId]);
-        $stmt  = $sql->prepareStatementForSqlObject($query);
-        $stmt->execute();
-
         return $geocoderDataId;
     }
 
