@@ -1,3 +1,5 @@
+* EVOL Add SQL transaction on insert
+
 1.0.3 (2018-11-14)
 -------
 * EVOL Use of NotFoundException + Storage of place names and postal codes + Tests added
